# moving-to-docker-compose

./: .pre-commit-config.yaml  Dockerfile  README.md  README.rst  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
source/: main.py
tests/: test_main.py
