[tool.poetry]
name = "moving-to-docker-compose"
version = "0.1.0"
description = ""
authors = ["Jose Vazquez <jose.vazquez@ing.com>"]

[virtualenvs]
create = true  # this creates a .venv folder
in-project = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
